gapping fixes

--- a/css/style.scss
+++ b/css/style.scss
@@ -543,7 +543,7 @@ body {
 
 
 .shop-category {
-  padding: px-to-rem(60) px-to-rem(20);
+  padding: px-to-rem(60) px-to-rem(20) px-to-rem(30);
   text-align: center;
 
   h2 {
